--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
                   <form id="modositas">
                     <h4>Módosítás:</h4>
-                    <label for="id">ID:</label><br>
-                    <select id="id">
-                       
+                    <label for="selectSzulo">ID:</label><br>
+                    <select id="selectSzulo">
+                      <option class="selectOpcio"></option>
                     </select><br>
                     <label for="szerzo">Szerző:</label><br>
                     <input type="text" id="szerzo" name="szerzo"><br>
